--- a/content/posts/2020-01-07-building-your-own-blog-with-gatsby-novela/index.mdx
+++ b/content/posts/2020-01-07-building-your-own-blog-with-gatsby-novela/index.mdx
@@ -8,6 +8,8 @@ excerpt: A summary of how I instrumented a modded Minecraft server running on a 
 
 ## New Relic and Minecraft primer
 
+Test
+
 What is New Relic
 
 What is Minecraft
